--- a/2.3/test.html
+++ b/2.3/test.html
@@ -51,7 +51,7 @@ $(this).html('<input id="editbox" size="'+ $(this).text().length+'" type="text" 
 $('#editbox').focus();
 });
 
-//test github
+//test github1
 
 
 //определяем нажатие кнопки на клавиатуре
