--- a/2.3/test.html
+++ b/2.3/test.html
@@ -49,13 +49,14 @@ $(this).addClass('ajax');
 $(this).html('<input id="editbox" size="'+ $(this).text().length+'" type="text" value="' + $(this).text() + '" />');
 //устанавливаем фокус на созданном элементе
 $('#editbox').focus();
-});
+
+//test github
 
 
 //определяем нажатие кнопки на клавиатуре
 $('td.edit').keydown(function(event){
-//получаем значение класса и разбиваем на массив
-//в итоге получаем такой массив - arr[0] = edit, arr[1] = наименование столбца, arr[2] = id строки
+//получаем значение класса и разбиваем на массив ->
+//<- в итоге получаем такой массив - arr[0] = edit, arr[1] = наименование столбца, arr[2] = id строки
 arr = $(this).attr('class').split( " " );
 console.log(arr);
 //проверяем какая была нажата клавиша и если была нажата клавиша Enter (код 13)
